<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="12"
                android:hint="Name"
                android:inputType="text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/yourscore"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/score_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:layout_marginTop="5dp"
            android:textSize="18sp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textSize="18sp">

            <RadioButton
                android:id="@+id/question1_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question1_choice1" />

            <RadioButton
                android:id="@+id/question1_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question1_choice2" />

            <RadioButton
                android:id="@+id/question1_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question1_choice3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question2_answer"
            android:layout_marginTop="5dp"
            android:text="@string/question2"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/question2_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/question3"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/question3_choice1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3_choice1" />

        <CheckBox
            android:id="@+id/question3_choice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3_choice2" />

        <CheckBox
            android:id="@+id/question3_choice3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3_choice3" />

        <CheckBox
            android:id="@+id/question3_choice4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3_choice4" />

        <TextView
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question4_answer"
            android:layout_marginTop="5dp"
            android:text="@string/question4"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/question4_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />


        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitanswers"
            android:text="@string/submit_answers" />

    </LinearLayout>
</ScrollView>